# qpOASES

./: .gitignore  CMakeLists.txt  package.xml
include/: qpOASES.hpp
include/qpOASES/: Eigen.hpp
src/: Eigen.cpp
